# unbound.computer

./: .env.local.example  .env.release.template  .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  README.md  biome.json  components.json  content-collections.ts  eslint.config.mjs  next.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  turbo.json
apps/cli-new/: CHANGELOG.md  Cargo.toml  package.json
apps/cli-new/src/: main.rs  output.rs
apps/cli-new/src/commands/: auth.rs  daemon.rs  mod.rs  repos.rs  sessions.rs
apps/cli-new/src/tui/: app.rs  claude_events.rs  daemon_client.rs  event.rs  mod.rs  theme.rs  ui.rs
apps/cli-new/src/tui/components/: account_dialog.rs  chat_panel.rs  mod.rs  sidebar.rs  version_control.rs
apps/daemon/: .env.example  ARCHITECTURE_REVIEW.md  CHANGELOG.md  Cargo.toml  REFACTORING_GUIDE.md  package.json
apps/daemon/.cargo/: config.toml
apps/daemon/crates/agent-session-sqlite-persist-core/: Cargo.toml  README.md
apps/daemon/crates/agent-session-sqlite-persist-core/src/: armin.rs  delta.rs  lib.rs  live.rs  reader.rs  side_effect.rs  sqlite.rs  types.rs  writer.rs
apps/daemon/crates/armin/: ARCHITECTURE.md  Cargo.toml  README.md
apps/daemon/crates/armin/src/: armin.rs  delta.rs  lib.rs  live.rs  reader.rs  side_effect.rs  snapshot.rs  sqlite.rs  types.rs  writer.rs
apps/daemon/crates/auth-engine/: Cargo.toml  README.md
apps/daemon/crates/auth-engine/src/: auth_fsm.rs  daemon_runtime.rs  session.rs  supabase_client.rs
apps/daemon/crates/bakugou/: Cargo.toml  README.md
apps/daemon/crates/bakugou/src/: command_runner.rs  error.rs  lib.rs  operations.rs  types.rs
apps/daemon/crates/claude-debug-logs/: Cargo.toml  README.md
apps/daemon/crates/claude-debug-logs/src/: lib.rs
apps/daemon/crates/claude-process-manager/: Cargo.toml  README.md
apps/daemon/crates/claude-process-manager/src/: config.rs  error.rs  lib.rs  process.rs  stream.rs
apps/daemon/crates/daemon-auth/: Cargo.toml  README.md
apps/daemon/crates/daemon-auth/src/: auth_fsm.rs  error.rs  lib.rs  oauth.rs  session.rs  supabase_client.rs
apps/daemon/crates/daemon-bin/: Cargo.toml  README.md
apps/daemon/crates/daemon-bin/src/: armin_adapter.rs  main.rs  observability.rs
apps/daemon/crates/daemon-board/: Cargo.toml  README.md
apps/daemon/crates/daemon-board/src/: error.rs  lib.rs  models.rs  run_summary.rs  service.rs
apps/daemon/crates/daemon-config-and-utils/: Cargo.toml  README.md  build.rs
apps/daemon/crates/daemon-config-and-utils/src/: config.rs  conversation_crypto.rs  hybrid_crypto.rs  lib.rs  logging.rs  paths.rs  telemetry.rs
apps/daemon/crates/daemon-core/: Cargo.toml  README.md
apps/daemon/crates/daemon-core/src/: config.rs  error.rs  git.rs  hybrid_crypto.rs  lib.rs  logging.rs  paths.rs
apps/daemon/crates/daemon-database/: Cargo.toml  README.md
apps/daemon/crates/daemon-database/src/: db.rs  encryption.rs  error.rs  executor.rs  lib.rs  migrations.rs  models.rs  pool.rs  queries.rs
apps/daemon/crates/daemon-ipc/: Cargo.toml  README.md
apps/daemon/crates/daemon-ipc/src/: error.rs  lib.rs  protocol.rs  server.rs
apps/daemon/crates/daemon-lifecycle/: Cargo.toml  README.md
apps/daemon/crates/daemon-lifecycle/src/: lib.rs
apps/daemon/crates/daemon-outbox/: Cargo.toml  README.md
apps/daemon/crates/daemon-outbox/src/: error.rs  lib.rs  manager.rs  queue.rs  sender.rs
apps/daemon/crates/daemon-relay/: Cargo.toml  README.md
apps/daemon/crates/daemon-relay/src/: client.rs  error.rs  lib.rs  messages.rs
apps/daemon/crates/daemon-storage/: Cargo.toml  README.md
apps/daemon/crates/daemon-storage/src/: keys.rs  lib.rs  linux.rs  macos.rs  secrets.rs  traits.rs  windows.rs
apps/daemon/crates/daemon-stream/: Cargo.toml  README.md
apps/daemon/crates/daemon-stream/src/: error.rs  lib.rs  message_cache.rs  protocol.rs
apps/daemon/crates/daemon-stream/tests/: integration_test.rs
apps/daemon/crates/deku/: Cargo.toml  README.md
apps/daemon/crates/deku/src/: config.rs  error.rs  event.rs  lib.rs  process.rs  stream.rs
apps/daemon/crates/device-identity-crypto/: Cargo.toml  README.md
apps/daemon/crates/eren-machines/: Cargo.toml
apps/daemon/crates/falco/: Cargo.toml  README.md
apps/daemon/crates/gh-cli-ops/: Cargo.toml  README.md
apps/daemon/crates/git-ops/: Cargo.toml  README.md
apps/daemon/crates/gyomei/: Cargo.toml  README.md
apps/daemon/crates/historia-lifecycle/: Cargo.toml
apps/daemon/crates/ipc-protocol-types/: Cargo.toml  README.md
apps/daemon/crates/levi/: Cargo.toml  README.md
apps/daemon/crates/message-sync-retriable-worker/: Cargo.toml
apps/daemon/crates/one-for-all-protocol/: Cargo.toml  README.md
apps/daemon/crates/piccolo/: Cargo.toml  README.md
apps/daemon/crates/process-event-bridge/: Cargo.toml  README.md
apps/daemon/crates/rengoku-sessions/: Cargo.toml  README.md
apps/daemon/crates/runtime-capability-detector/: Cargo.toml  README.md
apps/daemon/crates/safe-file-ops/: Cargo.toml  README.md
apps/daemon/crates/safe-repo-dir-lister/: Cargo.toml  README.md
apps/daemon/crates/sakura-working-dir-resolution/: Cargo.toml  README.md
apps/daemon/crates/sasuke-crypto/: Cargo.toml  README.md
apps/daemon/crates/session-lifecycle-orchestrator/: Cargo.toml  README.md
apps/daemon/crates/session-sync-sink/: Cargo.toml  README.md
apps/daemon/crates/session-title-generator/: Cargo.toml  README.md
apps/daemon/crates/tien/: Cargo.toml  README.md
apps/daemon/crates/toshinori/: Cargo.toml  README.md
apps/daemon/crates/workspace-resolver/: Cargo.toml  README.md
apps/daemon/crates/yagami/: Cargo.toml  README.md
apps/daemon/crates/yamcha/: Cargo.toml  README.md
apps/daemon/crates/ymir/: Cargo.toml  README.md
apps/daemon/scripts/: test.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  compatibility.rs  main.rs  observability.rs  updater.rs
(+3341 files in other folders)
