[package]
name = "unbound-cli"
version = "0.0.9"
edition = "2021"
authors = ["Unbound <team@unbound.computer>"]
license = "MIT"
description = "Unbound CLI - Command-line interface for the Unbound daemon"
repository = "https://github.com/unbound-computer/unbound"

[[bin]]
name = "unbound"
path = "src/main.rs"

[dependencies]
# Daemon crates
daemon-core = { path = "../daemon/crates/daemon-core" }
daemon-ipc = { path = "../daemon/crates/daemon-ipc" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
observability = { path = "../daemon/../../packages/observability" }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# For opening browser
open = "5.0"

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async event handling
futures = "0.3"

# Text handling
unicode-width = "0.2"
textwrap = "0.16"

# Secure password input
rpassword = "7.3"
