[workspace]
resolver = "2"
members = [
    "crates/armin",
    "crates/daemon-config-and-utils",
    "crates/daemon-storage",
    "crates/daemon-database",
    "crates/ymir",
    "crates/daemon-auth",
    "crates/daemon-ipc",
    "crates/daemon-bin",

    "crates/toshinori",
    "crates/levi",
    "crates/deku",
    "crates/yagami",
    "crates/yamcha",
    "crates/piccolo",
    "crates/gyomei",
    "crates/one-for-all-protocol",
    "crates/sakura-working-dir-resolution",
    "crates/eren-machines",
    "crates/rengoku-sessions",
    "crates/sasuke-crypto",
    "crates/historia-lifecycle",
    "crates/tien",
    "crates/bakugou",
]

[workspace.package]
version = "0.0.17"
edition = "2021"
authors = ["Unbound <team@unbound.computer>"]
license = "MIT"
repository = "https://github.com/unbound-computer/unbound"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
tokio-rusqlite = "0.6"  # Async SQLite executor with dedicated thread

# Encryption
chacha20poly1305 = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Platform-specific secure storage
security-framework = "3.1"  # macOS Keychain
security-framework-sys = "2.12"  # Low-level macOS Security APIs
core-foundation = "0.10"  # macOS Core Foundation types
secret-service = { version = "3.0", features = ["rt-tokio-crypto-rust"] }  # Linux Secret Service (blocking API)
windows = { version = "0.58", features = ["Security_Credentials"] }

futures-util = "0.3"

# IPC
interprocess = { version = "2.2", features = ["tokio"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
observability = { path = "../../packages/observability" }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
dirs = "6.0"
ulid = "1.1"

# HTTP client (for OAuth callback and relay HTTP)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Local workspace crates
armin = { path = "crates/armin" }
daemon-config-and-utils = { path = "crates/daemon-config-and-utils" }
daemon-storage = { path = "crates/daemon-storage" }
daemon-database = { path = "crates/daemon-database" }
ymir = { path = "crates/ymir" }
daemon-auth = { path = "crates/daemon-auth" }
daemon-ipc = { path = "crates/daemon-ipc" }

toshinori = { path = "crates/toshinori" }
levi = { path = "crates/levi" }
deku = { path = "crates/deku" }
yagami = { path = "crates/yagami" }
yamcha = { path = "crates/yamcha" }
piccolo = { path = "crates/piccolo" }
gyomei = { path = "crates/gyomei" }
one-for-all-protocol = { path = "crates/one-for-all-protocol" }
sakura-working-dir-resolution = { path = "crates/sakura-working-dir-resolution" }
eren-machines = { path = "crates/eren-machines" }
rengoku-sessions = { path = "crates/rengoku-sessions" }
sasuke-crypto = { path = "crates/sasuke-crypto" }
historia-lifecycle = { path = "crates/historia-lifecycle" }
tien = { path = "crates/tien" }
bakugou = { path = "crates/bakugou" }

# Redis
redis = { version = "0.28", features = ["tokio-comp", "aio", "streams"] }
