[package]
name = "armin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite-backed session engine that commits facts, derives fast read views, and emits side-effects"

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
