[package]
name = "daemon-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "unbound-daemon"
path = "src/main.rs"

[dependencies]
armin = { workspace = true }
claude-debug-logs = { workspace = true }
daemon-config-and-utils = { workspace = true }
daemon-storage = { workspace = true }
daemon-database = { workspace = true }
piccolo = { workspace = true }
tien = { workspace = true }
bakugou = { workspace = true }
ymir = { workspace = true }
daemon-ipc = { workspace = true }
toshinori = { workspace = true }
levi = { workspace = true }
deku = { workspace = true }
yagami = { workspace = true }
gyomei = { workspace = true }
sakura-working-dir-resolution = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
base64 = { workspace = true }
urlencoding = "2.1"
reqwest = { workspace = true }
hostname = "0.4"
libc = "0.2.180"
sha2 = { workspace = true }
