[package]
name = "daemon-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "unbound-daemon"
path = "src/main.rs"

[dependencies]
agent-session-sqlite-persist-core = { workspace = true }
claude-debug-logs = { workspace = true }
daemon-config-and-utils = { workspace = true }
daemon-storage = { workspace = true }
daemon-database = { workspace = true }
git-ops = { workspace = true }
runtime-capability-detector = { workspace = true }
gh-cli-ops = { workspace = true }
auth-engine = { workspace = true }
daemon-ipc = { workspace = true }
session-sync-sink = { workspace = true }
message-sync-retriable-worker = { workspace = true }
claude-process-manager = { workspace = true }
safe-repo-dir-lister = { workspace = true }
safe-file-ops = { workspace = true }
workspace-resolver = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
base64 = { workspace = true }
urlencoding = "2.1"
reqwest = { workspace = true }
hostname = "0.4"
libc = "0.2.180"
sha2 = { workspace = true }
