[package]
name = "daemon-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "unbound-daemon"
path = "src/main.rs"

[dependencies]
agent-session-sqlite-persist-core = { workspace = true }
claude-debug-logs = { workspace = true }
daemon-config-and-utils = { workspace = true }
daemon-storage = { workspace = true }
daemon-database = { workspace = true }
git-ops = { workspace = true }
runtime-capability-detector = { workspace = true }
gh-cli-ops = { workspace = true }
daemon-ipc = { workspace = true }
claude-process-manager = { workspace = true }
safe-repo-dir-lister = { workspace = true }
safe-file-ops = { workspace = true }
workspace-resolver = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
signal-hook = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = "0.2.180"
