[package]
name = "daemon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
observability = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }

# Hybrid encryption (X25519 ECDH + HKDF + ChaCha20-Poly1305)
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }

# Git operations
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
