[package]
name = "daemon-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
rusqlite = { workspace = true }
# Legacy pool - kept for backwards compatibility during migration
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
# New async executor
tokio-rusqlite = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
