[package]
name = "daemon-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-stream = { path = "../daemon-stream" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
interprocess = { workspace = true }
