[package]
name = "daemon-lifecycle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Daemon lifecycle management (startup, shutdown, singleton, PID) for the Unbound daemon"

[dependencies]
daemon-config-and-utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
