[package]
name = "daemon-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
daemon-config-and-utils = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
security-framework-sys = { workspace = true }
core-foundation = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
