[package]
name = "daemon-stream"
version = "0.1.0"
edition = "2021"
description = "High-performance shared memory streaming for daemon-client IPC"
license = "MIT"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Unix-specific dependencies (macOS/Linux)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["mman", "fs"] }

# Windows-specific dependencies (future implementation)
# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.58", features = [
#     "Win32_Foundation",
#     "Win32_System_Memory",
#     "Win32_System_Threading",
#     "Win32_Security",
# ]}

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"

[features]
default = []
# Enable when Windows implementation is complete
# windows = []
