[package]
name = "eren-machines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Process lifecycle management (Claude CLI, terminal) for the Unbound daemon"

[dependencies]
agent-session-sqlite-persist-core = { workspace = true }
deku = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
agent-session-sqlite-persist-core = { workspace = true }
