[package]
name = "falco"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stateless, crash-safe courier for encrypted remote commands"

[[bin]]
name = "falco"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Redis
redis = { version = "0.28", features = ["tokio-comp", "aio", "streams"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
observability = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Local workspace crates
daemon-core = { workspace = true }
daemon-storage = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
