[package]
name = "gh-cli-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Typed GitHub CLI orchestration for the Unbound daemon"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
