[package]
name = "ipc-protocol-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure IPC protocol types for the Unbound daemon — no I/O, no async"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
