[package]
name = "piccolo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native git operations for the Unbound daemon using libgit2"

[dependencies]
git2 = "0.19"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
