[package]
name = "runtime-capability-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System dependency detection for the Unbound daemon"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process"] }
chrono = { workspace = true }
