[package]
name = "session-lifecycle-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session lifecycle orchestration (create, delete, secrets) for the Unbound daemon"

[dependencies]
agent-session-sqlite-persist-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
agent-session-sqlite-persist-core = { workspace = true }
tempfile = "3"
